--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+    <link rel=stylesheet" href="./file.css">
     <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script>
     <script type="text/javascript"></script>
     <title>jadval tartib</title>
     <style>
-        .center{
+<!--         .center{
             margin: auto;
             width: 12px;
             height: 25px;
@@ -31,7 +32,7 @@
             border-radius: 12px;
             overflow-x: hidden;
             /* display: block; */
-        }
+        } -->
     </style>
     <script>
         $(document).ready(function (){
