--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css">
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <script src="./git/jquery.min.js"></script>
-    <script src="./git/owl.carousel.js"></script>
-    <link rel="stylesheet" href="./git/owl.carousel.min.css">
-    <link rel="stylesheet" href="./git/owl.theme.default.min.css"> 
+    <script src="./jquery.min.js"></script>
+    <script src="./owl.carousel.js"></script>
+    <link rel="stylesheet" href="./owl.carousel.min.css">
+    <link rel="stylesheet" href="./owl.theme.default.min.css"> 
     <title>page</title>
     <style>
         *{
