--- a/index.html
+++ b/index.html
@@ -614,7 +614,23 @@
     </main>
     <script>
 
+        var owl = $('.owl-carousel');
+        owl.owlCarousel({
 
+            margin: 10,
+            loop: true,
+            responsive: {
+            0: {
+            items: 1
+            },
+            600: {
+            items: 2
+            },
+            1000: {
+            items: 3
+            }
+        }
+        })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.0/dist/Chart.min.js"></script>
 </body>
