--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<a class="nav-link" href="about.html">درباره</a>
 				  		</li>
 				  		<li class="nav-item ">
-							<a class="nav-link" href="#">بیشتر</a>
+							<a class="nav-link" href="./index1.html">بیشتر</a>
 				  		</li>  
 				  		<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">more</a>
