--- a/index1.html
+++ b/index1.html
@@ -365,7 +365,7 @@
         <div class="row">
             <div class="col-md-3 person">
                 <div class="detail">
-                    <img class="img" src="./git/toop1.png" alt="">
+                    <img class="img" src="./toop1.png" alt="">
                     <h4>jacson</h4>
                     <p>online</p>
                     <i class="fas fa-star star"></i>
@@ -381,7 +381,7 @@
             </div>
             <div class="col-md-3">
                 <div class="detail">
-                    <img class="img" src="./git/toop1.png" alt="">
+                    <img class="img" src="./toop1.png" alt="">
                     <h4>jacson</h4>
                     <p>online</p>
                     <i class="fas fa-star star"></i>
@@ -397,7 +397,7 @@
             </div>
             <div class="col-md-3">
                 <div class="detail">
-                    <img class="img" src="./git/toop1.png" alt="">
+                    <img class="img" src="./toop1.png" alt="">
                     <h4>jacson</h4>
                     <p>online</p>
                     <i class="fas fa-star star"></i>
@@ -413,7 +413,7 @@
             </div>
             <div class="col-md-3">
                 <div class="detail">
-                    <img class="img" src="./git/toop1.png" alt="">
+                    <img class="img" src="./toop1.png" alt="">
                     <h4>jacson</h4>
                     <p>online</p>
                     <i class="fas fa-star star"></i>
@@ -451,7 +451,7 @@
             </div>
             <div class="col-lg-3">
                 <!-- <div>
-                    <img class="emg" src="./git/toop1.png" alt="">
+                    <img class="emg" src="./toop1.png" alt="">
                 </div> -->
                 <div class="slider emg">
                     <a href="#slide-1">1</a>
