--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="hom.html">خانه</a>
 				 		</li>
 				  		<li class="nav-item ">
-							<a class="nav-link" href="about.html">درباره</a>
+							<a class="nav-link" href="index2.html">درباره</a>
 				  		</li>
 				  		<li class="nav-item ">
 							<a class="nav-link" href="./index1.html">بیشتر</a>
