--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ScrollMagic Classes</title>
+        <title>animal</title>
         <script src="./prettify.js"> </script>
         <script src="./lang-css.js"> </script>
         <link type="text/css" rel="stylesheet" href="./sunlight.default.css">
